--- a/credence.env
+++ b/credence.env
@@ -2,4 +2,4 @@ SMTP_HOST=mail.ultradeeptech.com
 SMTP_USERNAME=contact@ultradeeptech.com
 SMTP_PASSWORD=M94YMNexLntRrft
 SMTP_PORT=465
-SMTP_SECURE=tls
+SMTP_SECURE=ssl
