--- a/credence.env
+++ b/credence.env
@@ -1,5 +1,5 @@
 SMTP_HOST=mail.ultradeeptech.com
 SMTP_USERNAME=contact@ultradeeptech.com
 SMTP_PASSWORD=M94YMNexLntRrft
-SMTP_PORT=587
-SMTP_SECURE=tls
+SMTP_PORT=465
+SMTP_SECURE=ssl
