--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,9 @@
-runtime: nodejs14
+runtime: nodejs16
 
 handlers:
   - url: /
-    static_files: dist/index.html
-    upload: dist/index.html
+    static_files: index.html
+    upload: index.html
 
   - url: /
-    static_dir: dist
+    static_dir: public
