--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "website",
   "version": "1.0.0",
-  "description": "My website project",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "build": "echo 'No build script defined'"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.17.1"
