--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,8 @@
 steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['install']
+  env:
+  - 'NODE_OPTIONS=--max_old_space_size=4096'
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['app', 'deploy']
 
