--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,7 @@
+options:
+  machineType: 'E2_HIGHCPU_8'
+  logging: CLOUD_LOGGING_ONLY
+
 steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['install']
@@ -5,6 +9,3 @@ steps:
   - 'NODE_OPTIONS=--max_old_space_size=4096'
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['app', 'deploy']
-
-options:
-  logging: CLOUD_LOGGING_ONLY
