--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "install": "npm install",
-    "build": "echo 'No build step defined'"
+    "install": "npm install"
   },
   "dependencies": {
     "express": "^4.17.1"
   }
 }
-
