--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,10 @@
 steps:
 - name: 'gcr.io/cloud-builders/npm'
-  args: ['install']
+  args: ['install', '--max-old-space-size=1024']
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['app', 'deploy']
 
 options:
   logging: CLOUD_LOGGING_ONLY
+  machineType: 'N1_HIGHCPU_8'
+
