--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,9 @@
 steps:
 - name: 'gcr.io/cloud-builders/npm'
-  args: ['install', '--max-old-space-size=1024']
+  args: ['install', '--max-old-space-size=4096']
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['app', 'deploy']
 
 options:
   logging: CLOUD_LOGGING_ONLY
-  machineType: 'N1_HIGHCPU_8'
-
+  machineType: 'E2_HIGHMEM_8'
