--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,3 +7,6 @@ steps:
 options:
   logging: CLOUD_LOGGING_ONLY
   machineType: 'E2_HIGHCPU_8'
+  logsBucket: 'gs://mywebsite-bucket'
+  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
+  
