--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,10 @@
-name: "build-and-deploy"
-description: "Build and deploy to Cloud Run service on push to ^main$"
-trigger_template:
-  repo_name: "UltraDeep-Tech/website"
-  branch_name: "main"
-build:
-  steps:
-  - name: 'gcr.io/cloud-builders/npm'
-    args: ['install', '--max-old-space-size=4096']
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy']
-  options:
-    logging: CLOUD_LOGGING_ONLY
-    machineType: 'E2_HIGHCPU_8'
+steps:
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['install', '--max-old-space-size=4096']
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['app', 'deploy']
+
+options:
+  logging: CLOUD_LOGGING_ONLY
+  machineType: 'E2_HIGHCPU_8'
+  logsBucket: "gs://mywebsite-bucket"
