--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,4 +7,4 @@ steps:
 options:
   logging: CLOUD_LOGGING_ONLY
   machineType: 'E2_HIGHCPU_8'
-  logsBucket: "gs://mywebsite-bucket"
+  logsBucket: "gs://mi-nuevo-bucket-de-logs"
