--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,10 @@
 steps:
-- name: 'gcr.io/cloud-builders/npm'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      npm install -g n && \
-      n 18.17.0 && \
-      npm install -g npm@latest && \
-      npm install
-- name: 'gcr.io/cloud-builders/gcloud'
-  args: ['app', 'deploy']
-
-options:
-  logging: CLOUD_LOGGING_ONLY
-  machineType: 'E2_HIGHCPU_8'
-  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/my-app-image', '.']
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['run', '-d', '-p', '8080:8080', 'gcr.io/$PROJECT_ID/my-app-image']
+  env:
+    - 'NODE_OPTIONS=--max-old-space-size=4096'
+    - 'NPM_CONFIG_LOGLEVEL=info'
+images:
+- 'gcr.io/$PROJECT_ID/my-app-image'
