--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,14 +1,8 @@
 [supervisord]
 nodaemon=true
 
-[program:nginx]
-command=/usr/sbin/nginx -g "daemon off;"
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
-autorestart=true
-
 [program:php-fpm]
 command=/usr/sbin/php-fpm7 --nodaemonize
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
-autorestart=true
+
+[program:nginx]
+command=/usr/sbin/nginx -g 'daemon off;'
