--- a/php-fpm.conf
+++ b/php-fpm.conf
@@ -2,9 +2,10 @@
 daemonize = no
 
 [www]
-listen = 8080
+listen = /var/run/php/php7.4-fpm.sock
 listen.owner = www-data
 listen.group = www-data
+listen.mode = 0660
 user = www-data
 group = www-data
 pm = dynamic
