--- a/php-fpm.conf
+++ b/php-fpm.conf
@@ -1,11 +1,9 @@
 [global]
+error_log = /var/log/php7/php-fpm.log
 daemonize = no
 
 [www]
-listen = /var/run/php/php7.4-fpm.sock
-listen.owner = www-data
-listen.group = www-data
-listen.mode = 0660
+listen = 0.0.0.0:9000
 user = www-data
 group = www-data
 pm = dynamic
@@ -14,3 +12,4 @@ pm.start_servers = 2
 pm.min_spare_servers = 1
 pm.max_spare_servers = 3
 chdir = /
+
