--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,18 @@
+# Ensure proper domain routing
+RewriteEngine On
+RewriteBase /
+
+# Add your image caching rules here
 <IfModule mod_expires.c>
-    ExpiresActive On
-    ExpiresByType image/jpeg "access plus 1 month"
-    ExpiresByType image/png "access plus 1 month"
-    ExpiresByType image/webp "access plus 1 month"
-    ExpiresByType image/gif "access plus 1 month"
-  </IfModule>
-  
-  <IfModule mod_headers.c>
-    <FilesMatch "\.(jpg|jpeg|png|gif|webp)$">
-      Header set Cache-Control "max-age=2592000, public"
-    </FilesMatch>
-  </IfModule>
-  
+  ExpiresActive On
+  ExpiresByType image/jpeg "access plus 1 month"
+  ExpiresByType image/png "access plus 1 month"
+  ExpiresByType image/webp "access plus 1 month"
+  ExpiresByType image/gif "access plus 1 month"
+</IfModule>
+
+<IfModule mod_headers.c>
+  <FilesMatch "\.(jpg|jpeg|png|gif|webp)$">
+    Header set Cache-Control "max-age=2592000, public"
+  </FilesMatch>
+</IfModule>
