--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SMTP_HOST=mail.ultradeeptech.com
+SMTP_HOST=smtp.hostinger.com
 SMTP_USERNAME=contact@ultradeeptech.com
-SMTP_PASSWORD=M94YMNexLntRrft
-SMTP_PORT=465
-SMTP_SECURE=ssl
+SMTP_PASSWORD="O4;^!f^tdMx"
+SMTP_PORT=587
+SMTP_SECURE=tls
