--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,7 +13,11 @@ steps:
       '--platform', 'managed',
       '--region', 'us-central1',
       '--allow-unauthenticated',
-      '--port', '8080'
+      '--port', '8080',
+      '--memory', '1Gi',
+      '--cpu', '1',
+      '--timeout', '300',
+      '--max-instances', '10'
     ]
 
 images:
